# okpos-backend-assignment

./: README.md  pyproject.toml
okpos_backend/: .pre-commit-config.yaml  Dockerfile  docker-compose.yml  nginx.conf  requirements.txt
okpos_backend/apps/shop/: apps.py  serializers.py  tests.py  urls.py  views.py
okpos_backend/apps/shop/migrations/: 0001_initial.py
okpos_backend/config/: settings.py  urls.py
okpos_backend/docker/: Dockerfile  entrypoint.sh
